[package]
name = "rustblockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
base58 = "0.2.0"
bincode = "1.3.3"
hex = "0.4.3"
ripemd = "0.1.3"
rocksdb = "0.23.0"
secp256k1 = { version = "0.30.0", features = ["std", "rand", "serde"] }
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10.8"
