[package]
name = "dcoin_core"
version = "0.1.0"
edition = "2021"

[dependencies]
core_lib = { path = "../core_lib" }
base58 = "0.2.0"
bincode = "1.3.3"
hex = "0.4.3"
ripemd = "0.1.3"
rocksdb = "0.23.0"
secp256k1 = { version = "0.30.0", features = ["std", "rand", "serde"] }
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.20.3"
libp2p = { version = "0.54.0", features = ["full"] }
tokio = { version = "1.44.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
axum = "0.8.1"
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
lazy_static = "1.5.0"
