[package]
name = "dCoin_wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
wasm-bindgen = "0.2.100"
core_lib = { path = "../core_lib" }
serde-wasm-bindgen = "0.6.5"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
