[package]
name = "dcoin_wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
wasm-bindgen = "0.2.100"
core_lib = { path = "../core_lib" }
serde-wasm-bindgen = "0.6.5"
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
wasm-bindgen-futures = "0.4.50"

[lib]
crate-type = ["cdylib", "rlib"]
